--- a/poster.css
+++ b/poster.css
@@ -2,6 +2,10 @@
 @page {
     margin: 0;
 }
+html {
+    font-size: 16px;
+    line-height: 1.2;
+}
 body {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -11,6 +15,7 @@ body {
     display: flex;
     flex-direction: column;
 }
+
 
 /* HEADER
  **************************************/
@@ -42,14 +47,60 @@ body {
     margin-top: -0.4em;
 }
 
-/* FORM
+/* GENERAL FORM
  **************************************/
-.form {
+form {
     flex: 1;
     flex-direction: row;
 }
+.formGroup {
+    padding-top: 1em;
+}
+.formGroup + .formGroup {
+    margin-top: 2em;
+}
+.formLine {
+    padding: 1.2em 0;
+    overflow: hidden;
+}
+.formItem {
+    float: left;
+    position: relative;
+    width: 44%;
+    margin-left: 4%;
+}
+.formItem + .formItem{
+    margin-right: 4%;
+}
+input[type=text] {
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    border: 1px darkgray solid;
+    border-width: 0 1px 1px;
+    width: 100%;
+    height: 0.5em;
+    margin-top: 0.5em;
+    vertical-align: bottom;
+}
+.interInput {
+    width: 5%;
+    display: inline-block;
+    text-align: center;
+    margin: 0 -0.32em;
+}
+label {
+    position: absolute;
+    top: 100%;
+}
+label > i {
+    font-size: x-small;
+}
+h3 {
+    margin: 0;
+    padding: 0;
+}
 
-/* IEDNTITE
+/* IDENTITY
  **************************************/
 .formIdentity {
     -moz-box-sizing: border-box;
@@ -59,4 +110,12 @@ body {
 }
 .formIdentity__member {
 
+}
+input.day,
+input.month {
+    width: 25%;
+    margin-right: 0;
+}
+input.year {
+    width: 40%;
 }
