--- a/poster.css
+++ b/poster.css
@@ -82,10 +82,22 @@ form {
     background: url(background.png) center center no-repeat;
 }
 .formIdentity {
+    border-right: 1px solid DimGrey;
+    padding-right: 1em;
+}
+.formInscription {
+    padding-left: 1em;
+}
+form > * {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+    display: flex;
     flex-basis: 50%;
-    border-right: 1px solid DimGrey;
+    flex-direction: column;
+}
+.formGroup {
+    padding-top: 1em;
+    flex-grow: 1;
 }
 
 @media (orientation: portrait) {
@@ -100,14 +112,6 @@ form {
 
 /* GENERAL FORM
  **************************************/
-form > * {
-    display: flex;
-    flex-direction: column;
-}
-.formGroup {
-    padding-top: 1em;
-    flex-grow: 1;
-}
 .formLine {
     padding: 12px 0 1.2em 0;
     overflow: hidden;
@@ -115,14 +119,11 @@ form > * {
 .formItem {
     float: left;
     position: relative;
-    width: 44%;
+    width: 46%;
     margin-left: 4%;
 }
-.formItem + .formItem{
-    margin-right: 4%;
-}
 .formItem--double {
-    width: 92%;
+    width: 96%;
 }
 input[type=text] {
     -moz-box-sizing: border-box;
@@ -161,10 +162,11 @@ h3 {
     text-transform: uppercase;
 }
 p {
-    margin: 0.5em 4% 0;
+    margin: 0.5em 4% 0 0;
     text-align: justify;
     line-height: 1.4;
 }
+
 
 /* IDENTITY
  **************************************/
@@ -175,4 +177,25 @@ input.month {
 }
 input.year {
     width: 40%;
+}
+
+
+/* ACTIVITY
+ **************************************/
+.activity {
+    border-collapse: collapse;
+    width: 100%;
+}
+.activity tr td {
+    padding-top: 12px
+}
+.activity tr td:nth-child(2) {
+    text-align: center;
+}
+.activity .total td {
+    font-weight: bold;
+}
+.activity .toComplete {
+    border-bottom: 1px darkgray dotted;
+    min-width: 75px;
 }
