--- a/poster.css
+++ b/poster.css
@@ -3,7 +3,7 @@
     margin: 0;
 }
 html {
-    font-size: 14px;
+    font-size: 12px;
     line-height: 1.2;
 }
 body {
@@ -22,9 +22,6 @@ body {
 .header {
     border-bottom: 1px solid DimGrey;
     position: relative;
-}
-.header_photo {
-    float: left;
 }
 .header__contact {
     position: absolute;
@@ -57,9 +54,6 @@ body {
 }
 
 @media (orientation: portrait) {
-    html {
-        font-size: 12px;
-    }
     .header {
         display: flex;
     }
@@ -126,6 +120,10 @@ h3 {
     padding: 0;
     text-transform: uppercase;
 }
+.tableWrapper {
+    margin-left: 4%;
+    width: 96%;
+}
 .formItem {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -181,12 +179,45 @@ p {
 @media (orientation: portrait) {
     .formItem {
         padding-top: 6px;
+        width: 30%;
+        margin-left: 3%;
+    }
+    .formItem--double {
+        width: 63%;
     }
 }
 
 
 /* IDENTITY
  **************************************/
+.formItem--photo {
+    float: right;
+}
+.photo {
+    margin: 0 auto;
+    border: 1px darkgray solid;
+    background: white;
+    width: 35mm;
+    height: 45mm;
+}
+.formItem--birth {
+    clear: left;
+}
+
+@media (orientation: portrait) {
+    .formItem--photo {
+        position: absolute;
+        width: auto;
+        right: 60px;
+        top: 40px;
+    }
+    .formBloc--address {
+        float: left;
+    }
+    .formBloc--contact {
+        float: right;
+    }
+}
 input.day,
 input.month {
     width: 25%;
