--- a/screen.css
+++ b/screen.css
@@ -1,35 +1,39 @@
-.format-A5.format-portrait .poster {
+body {
+    height: 100%;
+}
+.format-A5.format-portrait body {
     width: 148mm;
     height: 210mm;
 }
-.format-A5.format-landscape .poster {
+    
+.format-A5.format-landscape body {
     width: 210mm;
     height: 148mm;
 }
 
-.format-A4.format-portrait .poster {
+.format-A4.format-portrait body {
     width: 210mm;
     height: 297mm;
 }
-.format-A4.format-landscape .poster {
+.format-A4.format-landscape body {
     width: 297mm;
     height: 210mm;
 }
 
-.format-A3.format-portrait .poster {
+.format-A3.format-portrait body {
     width: 297mm;
     height: 420mm;
 }
-.format-A3.format-landscape .poster {
+.format-A3.format-landscape body {
     width: 420mm;
     height: 297mm;
 }
 
-.format-A2.format-portrait .poster {
+.format-A2.format-portrait body {
     width: 420mm;
     height: 594mm;
 }
-.format-A2.format-landscape .poster {
+.format-A2.format-landscape body {
     width: 594mm;
     height: 420mm;
 }
